# AI.AI

./: Dockerfile  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1d3e9633c87d_.py  216de1daa72a_change_password_column.py  431615c42385_init.py  4f3133fa0214_.py  502eac3ca024_.py  dee0a1cc0f5c_testing1.py  e7da4a95f37e_.py
app/: classes.py  main.py  models.py  schemas.py  utils.py
app/api/: deps.py  main.py  utils.py
app/api/routers/: auth.py  projects.py  users.py  video.py  video_wa.py
app/core/: config.py  db.py  security.py
app/crud/: animated_image_crud.py  animations_crud.py  default_crud.py  projects_crud.py  users_crud.py
app/models/: __init__.py  animated_image.py  animation.py  project.py  user.py
app/rendering/: classes.py  main.py  render.py  schemas.py
backend/: pyproject.toml
